feat: add selective chart training
